--- a/templates/farmers_page/farmer-dashboard.html
+++ b/templates/farmers_page/farmer-dashboard.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Farmer-Profile</title>
+    <title>farmer_dash_page</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="{% static 'https://fonts.googleapis.com '%}" />
@@ -105,10 +105,10 @@ https://www.tooplate.com/view/2127-little-fashion
                 >
               </li>
 
-              <li class="nav-item position-relative">
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'products:order_list' %}"
                   >View Orders
-                  <span class="badge rounded-pill text-white bg-dark">4</span>
+                  
                 </a>
               </li>
 
