--- a/templates/farmers_page/farmer-login.html
+++ b/templates/farmers_page/farmer-login.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Sign-In</title>
+        <title>farmer_login_page</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
