--- a/templates/farmers_page/order-page.html
+++ b/templates/farmers_page/order-page.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>KBT-Marketplace</title>
+    <title>order_list_page</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="{% static 'https://fonts.googleapis.com' %}" />
