--- a/templates/products/about.html
+++ b/templates/products/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>KBT-Marketplace</title>
+    <title>about_page</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="{% static 'https://fonts.googleapis.com' %}" />
@@ -81,11 +81,11 @@ https://www.tooplate.com/view/2127-little-fashion
               <a href="index.html">KBT</a> Marketplace
             </h4>
             <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">
-              Copyright © 2022 <strong>KBT-Marketplace</strong>
+              Copyright © 2025 <strong>KBT-Marketplace</strong>
             </p>
             <br />
             <p class="copyright-text">
-              Designed by <a href="#" target="_blank">RandoDev</a>
+              Designed by <a href="#" target="_blank">Aliyu Muhammad Musa</a>
             </p>
           </div>
 
