--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>KBT-Marketplace</title>
+    <title>products_list_page</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="{% static 'https://fonts.googleapis.com' %}" />
@@ -93,13 +93,13 @@ https://www.tooplate.com/view/2127-little-fashion
 
       <h2>{% if category %}{{category.name}}{% else %}Products{% endif %}</h2>
       {% for c in crop %}
-      <div class="col-lg-4 col-12 mb-3">
+      <div class="col-lg-4 col-6 mb-3">
         <div class="product-thumb">
           <a href="{{c.get_absolute_url}}">
             <img
               src="{% if c.crop_img %}{{c.crop_img.url}}{% else %}{% static 'images/img1.jpg' %}{% endif %}"
               class="img-fluid product-image"
-              style="width: 400px; height: 350px"
+              style="width: 300px; height: 200px"
               alt=""
             />
           </a>
