--- a/templates/Orders/create.html
+++ b/templates/Orders/create.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Farmer-Profile</title>
+    <title>order_page</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="{% static 'https://fonts.googleapis.com '%}" />
