--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>KBT-Marketplace</title>
+    <title>{% block title %} {% endblock title %}</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="{% static 'https://fonts.googleapis.com' %}" />
@@ -55,12 +55,9 @@ https://www.tooplate.com/view/2127-little-fashion
         <a href="{% url 'account' %}" class="col-lg-4 me-2">
           <i class="fa-regular fa-user"></i>
         </a>
-        <a href="{% url 'cart_view' %}" class="col-lg-4 position-relative">
+        <a href="{% url 'cart_view' %}" class="col-lg-4">
           <i class="fa-solid fa-cart-shopping">
   
-          <span class="position-absolute top-0 start-100 translate-middle ms-2 mb-3 badge rounded-circle text-light bg-danger">
-            5
-          </span>
         </i>
       </a>
     </div>
