--- a/templates/farmers_page/add-crops.html
+++ b/templates/farmers_page/add-crops.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Farmer-Profile</title>
+    <title>add_crop_page</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="{% static 'https://fonts.googleapis.com' %}" />
