--- a/templates/Orders/create.html
+++ b/templates/Orders/create.html
@@ -103,7 +103,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <br />
             <div class="form-floating">
               <input
-                type="tel"
+                type="text"
                 name="contact"
                 id="contact"
                 class="form-control"
