--- a/templates/accounts/edit-profile.html
+++ b/templates/accounts/edit-profile.html
@@ -76,7 +76,7 @@
         <input
           class="form-control form-control-md"
           name="contact"
-          type="tel"
+          type="text"
           id="contact"
           value="{{profile.contact}}"
           placeholder="Contact"
