--- a/templates/Orders/order_pdf.html
+++ b/templates/Orders/order_pdf.html
@@ -1,5 +1,5 @@
 <!-- templates/invoice_detail.html -->
-<h1>Invoice #{{ order.id }}</h1>
+<h1>Invoice #00{{ order.id }}39</h1>
 <p><strong>Date:</strong> {{ order.created }}</p>
 <p><strong>Customer Name:</strong> {{ order.full_name }}</p>
 <p><strong>Customer Email:</strong> ({{ order.email }})</p>
