--- a/templates/accounts/sign-up.html
+++ b/templates/accounts/sign-up.html
@@ -127,7 +127,7 @@ https://www.tooplate.com/view/2127-little-fashion
                           class="form-control"
                           required
                         >
-                          <option value="user">User</option>
+                          <option value="user">Customer</option>
                           <option value="farmer">Farmer</option>
                         </select>
 
