--- a/templates/Orders/order_list.html
+++ b/templates/Orders/order_list.html
@@ -84,7 +84,7 @@ https://www.tooplate.com/view/2127-little-fashion
             {% for order in orders %}
             <tr>
                 <td>{{ forloop.counter }}</td>
-                <td>#{{ order.id }}</td>
+                <td>#00{{ order.id }}39</td>
                 <td>{{ order.created|date:"Y-m-d H:i" }}</td>
                 <td>
                     {% if order.paid == True %}
