--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -101,7 +101,7 @@
         <div class="row">
             
             <div class="col-12 text-center text-decoration-underline">
-                <h2 class="mb-5">Featured Products</h2>
+                <h2 class="mb-5">Featured Crops</h2>
             </div>
             {% for c in crop %}
             
@@ -310,7 +310,7 @@ By shopping here, you’re not just buying food — you're investing in our loca
                     <div class="row">
                         
                         <div class="col-12 text-center text-decoration-underline">
-                            <h2 class="mb-5">Featured Products</h2>
+                            <h2 class="mb-5">Featured Crops</h2>
                         </div>
                         {% for c in crop %}
 <div class="col-lg-4 col-12 mb-3">
